components/kubeinvaders/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeinvaders
  labels:
    openshift.io/cluster-monitoring: 'true'
