components/kubeinvaders/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kubeinvaders
spec:
  to:
    kind: Service
    name: kubeinvaders
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
